@@ -394,10 +394,10 @@ class JobDipatcher:
 
 
     # update an event range
-    def updateEventRange(self,eventRangeID,eventStatus,coreCount,cpuConsumptionTime,timeout):
+    def updateEventRange(self,eventRangeID,eventStatus,coreCount,cpuConsumptionTime,objstoreID,timeout):
         # peek jobs
         tmpWrapper = _TimedMethod(self.taskBuffer.updateEventRange,timeout)
-        tmpWrapper.run(eventRangeID,eventStatus,coreCount,cpuConsumptionTime)
+        tmpWrapper.run(eventRangeID,eventStatus,coreCount,cpuConsumptionTime,objstoreID)
         # make response
         if tmpWrapper.result == Protocol.TimeOutToken:
             # timeout
@@ -848,15 +848,17 @@ def getEventRanges(req,pandaID,jobsetID,taskID=None,nRanges=10,timeout=60):
 
 
 # update an event range
-def updateEventRange(req,eventRangeID,eventStatus,coreCount=None,cpuConsumptionTime=None,timeout=60):
-    tmpStr = "updateEventRange(%s status=%s coreCount=%s cpuConsumptionTime=%s)" % \
-        (eventRangeID,eventStatus,coreCount,cpuConsumptionTime)
+def updateEventRange(req,eventRangeID,eventStatus,coreCount=None,cpuConsumptionTime=None,
+                     objstoreID=None,timeout=60):
+    tmpStr = "updateEventRange(%s status=%s coreCount=%s cpuConsumptionTime=%s osID=%s)" % \
+        (eventRangeID,eventStatus,coreCount,cpuConsumptionTime,objstoreID)
     _logger.debug(tmpStr+' start')
     tmpStat,tmpOut = checkPilotPermission(req)
     if not tmpStat:
         _logger.error(tmpStr+'failed with '+tmpOut)
         #return tmpOut
-    return jobDispatcher.updateEventRange(eventRangeID,eventStatus,coreCount,cpuConsumptionTime,int(timeout))
+    return jobDispatcher.updateEventRange(eventRangeID,eventStatus,coreCount,cpuConsumptionTime,
+                                          objstoreID,int(timeout))
 
 
 
